@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ruby-recaptcha-1.0.3 (19 Jun 2011)
+
+  19 Jun 2011; Hans de Graaff <graaff@gentoo.org> +ruby-recaptcha-1.0.3.ebuild:
+  Version bump.
+
   10 Jan 2011; Hans de Graaff <graaff@gentoo.org>
   ruby-recaptcha-1.0.2-r1.ebuild:
   Remove old version.
